--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -1,134 +1,77 @@
-<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <ScrollView
-        android:id="@+id/welcome"
+    android:layout_height="match_parent"
+    android:background="@color/white"
+    android:orientation="vertical"
+    android:gravity="center_horizontal"
+    android:paddingTop="200dp"
+    tools:context=".WelcomeFragment">
+
+    <ImageView
+        android:id="@+id/logo"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent">
+        android:layout_height="90dp"
+        android:contentDescription="@string/logo"
+        app:srcCompat="@drawable/logo_full"
+        tools:ignore="ImageContrastCheck" />
 
-        <RelativeLayout
-            android:id="@+id/content_container"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-
-            <RelativeLayout
-                android:id="@+id/page_welcome_ek1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="0dp"
-                android:layout_marginTop="0dp"
-                tools:ignore="UselessParent">
-
-                <View
-                    android:id="@+id/_bg__welcome_ek2"
-                    android:layout_width="match_parent"
-                    android:layout_height="800dp"
-                    android:layout_marginStart="0dp"
-                    android:layout_marginTop="0dp"
-                    android:background="@drawable/_bg__welcome_ek2_shape" />
-
-                <ImageView
-                    android:id="@+id/text_logo"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="-11dp"
-                    android:layout_marginTop="115dp"
-                    android:contentDescription="@string/text_logo"
-                    android:src="@drawable/text_logo" />
+    <TextView
+        android:id="@+id/loginMessage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="35dp"
+        android:layout_marginBottom="100dp"
+        android:text="@string/slogan"
+        android:textAlignment="center"
+        android:gravity="center"
+        android:textColor="#ABB0B8"
+        android:textSize="18sp" />
 
 
-                <RelativeLayout
-                    android:id="@+id/sign_up"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="66dp"
-                    android:layout_marginTop="479dp">
+    <Button
+        android:id="@+id/loginButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:maxWidth="290dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginEnd="60dp"
+        android:layout_marginTop="10dp"
+        android:backgroundTint="@color/green"
+        android:text="@string/login"
+        android:textColor="@color/white"
+        tools:ignore="TextContrastCheck" />
 
-                    <Button
-                        android:id="@+id/button"
-                        android:layout_width="218dp"
-                        android:layout_height="match_parent"
-                        android:backgroundTint="#F6F1DB"
-                        android:onClick="@string/action_sign_in"
-                        android:text="Sign up"
-                        android:textAlignment="center"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                        android:textStyle="bold"
-                        app:iconTint="#035BA4"
-                        app:rippleColor="#F6F1DB"
-                        tools:ignore="HardcodedText" />
+    <Button
+        android:id="@+id/signUpButton"
+        style="@style/CustomButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="60dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="60dp"
+        android:maxWidth="290dp"
+        android:text="@string/sign_up"
+        android:textColor="@color/green"
+        tools:ignore="TextContrastCheck" />
 
-                </RelativeLayout>
-
-                <View
-                    android:id="@+id/rectangle_11"
-                    android:layout_width="339dp"
-                    android:layout_height="177dp"
-                    android:layout_marginStart="9dp"
-                    android:layout_marginTop="273dp"
-                    android:alpha="0.81000000238419"
-                    android:background="@drawable/rectangle_11_shape" />
-
-                <ImageView
-                    android:id="@+id/bg_logo"
-                    android:layout_width="match_parent"
-                    android:layout_height="239dp"
-                    android:layout_marginStart="0dp"
-                    android:layout_marginTop="561dp"
-                    android:contentDescription="@string/bg_logo"
-                    android:src="@drawable/bg_logo" />
-
-                <TextView
-                    android:id="@+id/welcome_to_the_city_of_orlando_recycling_and_sustainability_project"
-                    android:layout_width="367.4dp"
-                    android:layout_height="166.4dp"
-                    android:layout_gravity="center_horizontal|center"
-                    android:layout_marginStart="-4dp"
-                    android:layout_marginTop="291dp"
-                    android:gravity="center"
-                    android:text="@string/welcome_to_the_city_of_orlando_recycling_and_sustainability_project_string"
-                    android:textColor="@color/sign_up_ek2_color"
-                    android:textSize="24sp"
-                    android:textStyle="bold"
-                    tools:ignore="TextSizeCheck" />
+    <TextView
+        android:id="@+id/continueAsGuest"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:gravity="center"
+        android:linksClickable="true"
+        android:minHeight="48dp"
+        android:text="@string/continue_as_guest"
+        android:textColor="@color/dark_green"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        tools:ignore="TextContrastCheck" />
 
 
-                <RelativeLayout
-                    android:id="@+id/login"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="82dp"
-                    android:layout_marginTop="538dp">
-
-                    <ImageView
-                        android:id="@+id/rectangle_12"
-                        android:layout_width="197dp"
-                        android:layout_height="29dp"
-                        android:layout_marginStart="0dp"
-                        android:layout_marginTop="0dp"
-                        android:contentDescription="@string/rectangle_12"
-                        android:src="@drawable/rectangle_12" />
-
-                    <TextView
-                        android:id="@+id/continue_as_guest"
-                        android:layout_width="166dp"
-                        android:layout_height="35dp"
-                        android:layout_gravity="center_horizontal|center"
-                        android:layout_marginStart="16dp"
-                        android:layout_marginTop="0dp"
-                        android:gravity="center"
-                        android:text="@string/continue_as_guest_string"
-                        android:textColor="@color/sign_up_ek2_color"
-                        android:textSize="20sp"
-                        tools:ignore="TextSizeCheck" />
-
-                </RelativeLayout>
-
-            </RelativeLayout>
-        </RelativeLayout>
-
-    </ScrollView>
-</HorizontalScrollView>
+</LinearLayout>
