--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,7 +9,7 @@
     <color name="dark_green">#397245</color>
     <color name="snow">#FFFAFA</color>
     <color name="light_gray">#DCDDDF</color>
-
+    <color name="gray">#838487</color>
     <color name="red">#FF0000</color>
 
 </resources>
