--- a/app/src/main/res/layout/fragment_terms.xml
+++ b/app/src/main/res/layout/fragment_terms.xml
@@ -5,16 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".TermsOfServiceFragment">
+    tools:context=".TermsFragment">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="40dp"
         android:paddingBottom="40dp"
         android:layout_marginStart="25dp"
-        android:layout_marginEnd="25dp"
-        android:orientation="horizontal">
+        android:layout_marginEnd="25dp">
 
         <FrameLayout
             android:id="@+id/greenBox"
@@ -56,7 +55,16 @@
 
         </LinearLayout>
 
-    </LinearLayout>
+        <ImageButton
+            android:id="@+id/closeButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/white"
+            android:contentDescription="@string/close_button"
+            android:src="@drawable/baseline_close_24"
+            android:layout_alignParentEnd="true"/>
+
+    </RelativeLayout>
 
     <View
         android:layout_width="match_parent"
@@ -64,6 +72,7 @@
         android:background="@color/gray" />
 
     <TextView
+        android:id="@+id/termsText"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginStart="25dp"
@@ -72,7 +81,8 @@
         android:paddingTop="20dp"
         android:text="@string/terms_of_service_filler"
         android:textColor="@color/gray"
-        android:textSize="14sp" />
+        android:textSize="14sp"
+        android:scrollbars="vertical" />
 
 
 </LinearLayout>
