Calendar fragment and HistoryFragment, Unfortunately history fragment is not up and running as yet

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,8 @@
     <color name="dark_green">#397245</color>
     <color name="snow">#FFFAFA</color>
     <color name="light_gray">#DCDDDF</color>
+    <color name="Lavender">#8692f7</color>
+
 
     <color name="red">#FF0000</color>
 </resources>
