done with contact screen UI

--- a/app/src/main/res/drawable/card_border.xml
+++ b/app/src/main/res/drawable/card_border.xml
@@ -7,7 +7,7 @@
         android:bottomLeftRadius="16dp"
         android:bottomRightRadius="16dp"/>
     <stroke
-        android:color="@color/Lavender"
+        android:color="@color/dark_green"
         android:width="2dp"/>
 
 </shape>
