--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -9,19 +9,23 @@
 
     <ImageView
         android:id="@+id/header_image"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_height="80dp"
         android:src="@drawable/gw_orlando_logo_1"
-        android:adjustViewBounds="true"
-        android:scaleType="fitXY"
-        android:layout_alignParentTop="true"/>
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="-125dp"
+        android:contentDescription="Green Works Orlando logo" />
+        <!--android:scaleType="fitXY"-->
+        <!--android:adjustViewBounds="true"-->
 
     <TextView
         android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Recycling Center Drop-off Locations"
-        android:textSize="18sp"
+        android:textSize="30sp"
+        android:textStyle="bold"
         android:textColor="#FF000000"
         android:layout_below="@id/header_image"
         android:layout_marginLeft="10dp"/>
@@ -52,11 +56,24 @@
 
     <ImageView
         android:id="@+id/city_of_orlando_image"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
         android:src="@drawable/city_of_orlando_logo_new_1"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="65dp"  />
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="65dp"
+        android:layout_marginStart="-20dp"
+        android:contentDescription="City of Orlando logo"/>
+
+    <TextView
+        android:id="@+id/city_of_orlando_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toEndOf="@+id/city_of_orlando_image"
+        android:layout_alignBottom="@+id/city_of_orlando_image"
+        android:text="© 2024 City of Orlando"
+        android:layout_marginStart="-25dp"
+        android:textColor="#FF000000"/>
 
 </RelativeLayout>
 
