--- a/app/src/main/res/layout/fragment_item_information.xml
+++ b/app/src/main/res/layout/fragment_item_information.xml
@@ -1,10 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
     tools:context=".ItemInformationFragment">
 
+    <ImageView
+        android:id="@+id/header_image"
+        android:layout_width="wrap_content"
+        android:layout_height="80dp"
+        android:src="@drawable/gw_orlando_logo_1"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="-125dp"
+        android:contentDescription="Green Works Orlando logo" />
+
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Item Information"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        android:textColor="#FF000000"
+        android:layout_below="@id/header_image"
+        android:layout_marginLeft="10dp"/>
+
+    <TextView
+        android:id="@+id/item_information"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Item Data from Web Team and/or Recollect API will go here (from home screen search, sorting guide, and scanner)."
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:textColor="#FF000000"
+        android:layout_below="@id/title"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="100dp" />
+
+    <ImageView
+        android:id="@+id/city_of_orlando_image"
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        android:src="@drawable/city_of_orlando_logo_new_1"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="65dp"
+        android:layout_marginStart="-20dp"
+        android:contentDescription="City of Orlando logo"/>
+
+    <TextView
+        android:id="@+id/city_of_orlando_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toEndOf="@+id/city_of_orlando_image"
+        android:layout_alignBottom="@+id/city_of_orlando_image"
+        android:text="© 2024 City of Orlando"
+        android:layout_marginStart="-25dp"
+        android:textColor="#FF000000"/>
 
 
-</FrameLayout>
+
+</RelativeLayout>
